# SQLManager

./: .gitignore  MANIFEST.in  README.md  build.py  build_obfuscated.py  build_wheel.py  build_wheel_obfuscated.py  pyproject.toml  setup.py
.claude/: settings.local.json
.github/workflows/: build-wheels.yml
SQLManager/: CoreConfig.py  __init__.py
SQLManager/_model/: __init__.py  _model_update.py  _model_update_BKP.py  _utils.py
SQLManager/_model/dialog/: __init__.py  run.py
SQLManager/analytics/: __init__.py  metadata.py  registry.py
SQLManager/benchmarks/: __init__.py  latency.py
SQLManager/connection/: database_connection.py
SQLManager/controller/: DataPulseCache.py  EDTController.py  NumberSequenceController.py  RouterController.py  SystemController.py  TableController.py  ViewController.py  WebSocketManager.py  __init__.py  databaseWatchController.py  test_AutoRouter.py
SQLManager/documents/: Analytics_5.0.md  AutoRouter_Tags_System.md  BUILD_DEPLOY.md  CHANGELOG_Tags_System.md  DataPulseCache.md  DataPulseCache_5.0.md  DatabaseAnalysis_5.0.md  Performance_5.0.md  QUICKSTART.md  SSH_SETUP.md  requirements.txt.example
SQLManager/tests/: __init__.py  test_Analytics_v5.py  test_AutoRouter.py  test_Benchmarks_v5.py  test_Connection.py  test_CoreConfig.py  test_CoreConfig_v5.py  test_DataPulseCache_v5.py  test_DatabaseAnalysis_v5.py  test_Dialects_QueryGen.py  test_Mixin.py  test_ModelUpdater_Dialect.py  test_NumberSeq.py  test_join.py  test_json_serialization.py  test_relation.py  test_view.py
src/model/: __init__.py
src/model/tables/: __init__.py  (+2 more)
(+55 files in other folders)
