[build-system]
requires = [
    "setuptools>=68",
    "wheel",
    "Cython>=3.1",
    "build"
]
build-backend = "setuptools.build_meta"

[project]
name = "SQLManager"
version = "4.2.3"
description = "Sistema para gerenciamento de banco de dados e validações"
requires-python = ">=3.10"
dependencies = [
    "pyodbc>=4.0.0",
    "python-dotenv>=0.19.0",
]

[project.optional-dependencies]
websocket = ["flask-socketio>=5.0.0"]

[tool.setuptools]
packages = ["SQLManager"]